# bento_drop_box_service

./: .gitignore  Dockerfile  MANIFEST.in  README.md  dev.Dockerfile  entrypoint.bash  entrypoint.dev.sh  entrypoint.sh  pyproject.toml  requirements.txt  run.bash  run.dev.bash  setup.py  tox.ini
.github/workflows/: build.yml  lint.yml  test.yml
bento_drop_box_service/: app.py  authz.py  backend.py  config.py  constants.py  minio.py  package.cfg  routes.py
bento_drop_box_service/backends/: __init__.py  base.py  dependency.py  local.py  minio.py  s3.py
chord_drop_box_service/: __init__.py  app.py  backend.py  constants.py  minio.py  package.cfg  routes.py
chord_drop_box_service/backends/: base.py  local.py  minio.py
tests/: conftest.py  test_backend.py  test_routes.py
