[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bento_drop_box_service"
version = "1.1.12"
description = "Drop box and basic file management service for the Bento platform."
authors = ["David Lougheed <david.lougheed@mail.mcgill.ca>", "Simon Chénard <simon.chenard2@mcgill.ca>"]
readme = "README.md"
packages = [{include = "bento_drop_box_service"}]
repository = "https://github.com/bento-platform/bento_drop_box_service"
license = "LGPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10.0"
bento-lib = {extras = ["fastapi"], version = "^12.3.0"}
aiofiles = "^24.1.0"
fastapi = {extras = ["all"], version = "^0.115.6"}
werkzeug = "^3.0.6"
python-multipart = "^0.0.18"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
tox = "^4.15.0"
coverage = "^7.5.2"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.6"
debugpy = "^1.8.6"
httpx = "^0.27.0"
ruff = "^0.9.10"

[tool.ruff]
line-length = 120
